# SIGMODArtifact

./: .gitignore  Dockerfile  README.md  docker_build.sh  docker_run.sh  docker_run_all.sh  requirements.txt
poisoning_projects/poisoning/cpp/: CMakeLists.txt
poisoning_projects/poisoning/cpp/apps/: calc_loss_main.cpp  calc_optimal_poison_duplicate_allowed_main.cpp  calc_optimal_poison_main.cpp  calc_upper_bound_binary_main.cpp  calc_upper_bound_golden_main.cpp  calc_upper_bound_strict_main.cpp  gen_real_main.cpp  gen_sync_main.cpp  inject_poison_consecutive_w_endpoints_duplicate_allowed_main.cpp  inject_poison_consecutive_w_endpoints_main.cpp  inject_poison_consecutive_w_endpoints_using_relaxed_solution_main.cpp  inject_poison_duplicate_allowed_main.cpp  inject_poison_main.cpp
poisoning_projects/poisoning/cpp/include/common/: binary_io.h  dataset_info.h  types.h
poisoning_projects/poisoning/cpp/include/poisoning/: calc_loss.h  calc_upper_bound_binary_search.h  calc_upper_bound_golden_section.h  calc_upper_bound_strict.h  data_generators.h  gen_real.h  get_quads.h  inject_poison.h  inject_poison_consecutive_w_endpoints.h  inject_poison_consecutive_w_endpoints_duplicate_allowed.h  inject_poison_consecutive_w_endpoints_using_relaxed_solution.h
poisoning_projects/poisoning/cpp/src/core/: calc_loss.cpp  calc_upper_bound_binary_search.cpp  calc_upper_bound_golden_section.cpp  calc_upper_bound_strict.cpp  get_quads.cpp  inject_poison.cpp  inject_poison_consecutive_w_endpoints.cpp  inject_poison_consecutive_w_endpoints_duplicate_allowed.cpp  inject_poison_consecutive_w_endpoints_using_relaxed_solution.cpp
poisoning_projects/poisoning/cpp/src/generators/: data_generators.cpp  gen_real.cpp
poisoning_projects/poisoning/cpp/src/utils/: binary_io.cpp  types.cpp
poisoning_projects/poisoning/plot/: analyze_Lgr_divided_by_Lub.py  analyze_Ls_divided_by_Lbruteforce.py  analyze_R_of_real_datasets.py  analyze_diff_between_algos.py  analyze_poison_coverage.py  load_loss.py  load_loss_comparison.py  load_optimal_poison.py  load_time_results.py  load_upper_bound.py  plot_R_L_ratios_brute_force.py  plot_R_LgrLub.py  plot_config.py  plot_datasets.py  plot_lambda_L_ratios_brute_force.py  plot_lambda_LconsecLbruteforce.py  plot_lambda_LconsecLbruteforce_duplicate_allowed.py  plot_lambda_LconsecLub.py  plot_lambda_LconsecLub_duplicate_allowed.py  plot_lambda_Lconsec_using_relaxed_solution_Lbruteforce.py  plot_lambda_Lconsec_using_relaxed_solution_Lconsec.py  plot_lambda_LgrLconsec.py  plot_lambda_LgrLconsec_duplicate_allowed.py  plot_lambda_LgrLconsec_using_relaxed_solution.py  plot_lambda_LgrLle.py  plot_lambda_LgrLub.py  plot_lambda_Ls_seed0.py  plot_lambda_time.py  plot_loss_curve.py  plot_maxLgrLconsec_Lub.py  plot_n_LgrLub.py  plot_n_time.py  plot_poisoned_datasets.py  plot_poisoned_datasets_duplicate_allowed.py
poisoning_projects/poisoning/scripts/: build.sh  env.sh  run_comprehensive_experiment.sh  step1_build.sh  step2_generate_datasets.sh  step3_0_inject_poison_duplicate_allowed.sh  step3_1_inject_poison_duplicate_allowed.sh  step3_2_inject_poison_consecutive_w_endpoints.sh  step3_3_inject_poison_consecutive_w_endpoints_duplicate_allowed.sh  step3_inject_poison.sh  step4_calculate_loss.sh  (+5 more)
